# ET3_Project_C

./: CMakeLists.txt  Makefile  README
Docs/: compil.tex  garde.tex  objectif.tex  perspective.tex  rapport.aux  rapport.out  rapport.tex  rapport.toc  recap.tex  sol.tex
Resources/: Tile.xml
include/: Animation.h  Datas.h  Element.h  Ennemy.h  File.h  Game.h  GlobarVar.h  List.h  Map.h  MusicManager.h  Object.h  Player.h  ResourcesManager.h  Trace.h  Window.h  csv.h  globalVar.h  typedefine.h
include/Contexts/: Context.h  InGame.h  Option.h  Start.h
include/Drawable/: Animation.h  Drawable.h  DynamicAnimation.h  Sprite.h  StaticAnimation.h  Text.h
include/Ennemies/: Ennemy.h  Goomba.h
include/IAs/: basic.h
include/Objects/: Finish.h  Object.h
include/Tiles/: Coin.h  DefaultTile.h  Ground.h  Tile.h  TileStart.h
include/Widgets/: Active.h  Button.h  CheckBox.h
src/: Datas.c  File.c  Game.c  List.c  Map.c  MusicManager.c  Object.c  Player.c  ResourcesManager.c  Trace.c  Window.c  csv.c  globalVar.c  main.c
src/Contexts/: InGame.c  Option.c  Start.c
src/Drawable/: Animation.c  Drawable.c  DynamicAnimation.c  Sprite.c  StaticAnimation.c  Text.c
src/Ennemies/: Ennemy.c  Goomba.c
src/IAs/: basic.c
src/Objects/: Finish.c  Object.c
src/Tiles/: Coin.c  DefaultTile.c  Ground.c  Tile.c  TileStart.c
src/Widgets/: Active.c  Button.c  CheckBox.c
